--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "flowbite": "^2.5.2",
     "i": "^0.3.7",
     "tailwindcss-elevation": "^2.0.0"
   },
